--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "devextreme": "23.2.5",
+    "devextreme-react": "23.2.5",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
